* InfoParser cleanup and _log helpers using Log::Any * dist.ini reconfigured to do a bunch of extra stuff.

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,28 @@ copyright_year   = 2011
 
 version = 0.001
 
+[PodWeaver]
+
 [@Git]
 
 [@Basic]
+
+[ExtraTests]
+[CriticTests]
+; [PodCoverageTests]
+; [PodSyntaxTests]
+; [NoTabsTests] ; disabled pending making it only check /my/ files, not test samples.
+
+; TODO: find proper versions for these.
+[Prereqs]
+Moose          = 0
+Log::Any       = 0
+PPI            = 0
+PPI::Document  = 0
+PPI::Dumper    = 0
+
+
+[Prereqs / TestRequires]
+Test::Exception  = 0
+Test::More       = 0
+Config::Auto     = 0.34
