--- a/t/samples/003-versions/values.yml
+++ b/t/samples/003-versions/values.yml
@@ -4,6 +4,7 @@ set-2:
     001-vars-str.pl: '200.20.2.01'
     002-vars-str-singlequote.pl: 'Angry-Armadillo'
     003-vars-datestamp.pl: '2011-05-24T01:28:10'
+    004-our-double-def.pl: '3.1.4.1.6'
 set-3:
     001-vars-concat-str.pl: '2011-05-24-v1.2'
     002-vars-sprintf.pl: '2011-05-24-v1.2'
