updated dist.ini with new testing prereqs.

--- a/dist.ini
+++ b/dist.ini
@@ -30,4 +30,5 @@ PPI::Dumper    = 0
 [Prereqs / TestRequires]
 Test::Exception  = 0
 Test::More       = 0
-Config::Auto     = 0.34
+YAML::Any        = 0
+Log::Any::Test   = 0
