added Test::Diffferences to testing prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -28,7 +28,8 @@ PPI::Dumper    = 0
 
 
 [Prereqs / TestRequires]
-Test::Exception  = 0
-Test::More       = 0
-YAML::Any        = 0
-Log::Any::Test   = 0
+Test::Exception   = 0
+Test::More        = 0
+YAML::Any         = 0
+Log::Any::Test    = 0
+Test::Differences = 0
