added some autocommit stuff to dist.ini, for some reason seems to be trying to upload twice though. Hmm.

--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Tom Feist
 copyright_year   = 2011
 
-version = 0.001
+; version = 0.001
 
 [PodWeaver]
 
@@ -12,11 +12,31 @@ version = 0.001
 
 [@Basic]
 
+[InstallGuide]
+[MetaJSON]
+
 [ExtraTests]
 [CriticTests]
+
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
+
+[Git::NextVersion]
+
 ; [PodCoverageTests]
 ; [PodSyntaxTests]
 ; [NoTabsTests] ; disabled pending making it only check /my/ files, not test samples.
+
+[MetaResources]
+; bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Your-Awesome-Module
+; bugtracker.mailto = bug-your-awesome-module@rt.cpan.org
+
+; If you have a repository...
+repository.url    = git://github.com:shabble/irssi-script-infoparser.git
+repository.web    = https://github.com/shabble/irssi-script-infoparser.git
+repository.type   = git
+
 
 ; TODO: find proper versions for these.
 [Prereqs]
