--- a/dist.ini
+++ b/dist.ini
@@ -40,12 +40,13 @@ repository.type   = git
 
 ; TODO: find proper versions for these.
 [Prereqs]
-Moose          = 0
-Log::Any       = 0
-PPI            = 0
-PPI::Document  = 0
-PPI::Dumper    = 0
-
+Moose                = 0
+Log::Any             = 0
+PPI                  = 0
+PPI::Document        = 0
+PPI::Dumper          = 0
+namespace::autoclean = 0
+ExtUtils::MakeMaker  = 0
 
 [Prereqs / TestRequires]
 Test::Exception   = 0
