updated dist.ini to remove redundant plugins, and try to make git-nextversion work

--- a/dist.ini
+++ b/dist.ini
@@ -4,24 +4,28 @@ license = Perl_5
 copyright_holder = Tom Feist
 copyright_year   = 2011
 
-; version = 0.001
+;version = 0.002
 
 [PodWeaver]
 
 [@Git]
-
+changelog   = Changes
+allow_dirty = dist.ini
 [@Basic]
 
 [InstallGuide]
 [MetaJSON]
 
-[ExtraTests]
+;[ExtraTests]
 [CriticTests]
 
-[TestRelease]
-[ConfirmRelease]
-[UploadToCPAN]
+;; all handled by @Basic.
 
+;[TestRelease]
+;[ConfirmRelease]
+;[UploadToCPAN]
+
+;; dunno why this isn't working.
 [Git::NextVersion]
 
 ; [PodCoverageTests]
